[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnipaxos_core = { git = "https://github.com/flaxen/omnipaxos" }
tokio = { version = "1.11.0", features = ["full"] } 
mini-redis = "0.4"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"

